--- a/template.html
+++ b/template.html
@@ -9,12 +9,118 @@
     <ul v-if="list" class="js-filter uk-child-width-1-2 uk-child-width-1-3@m uk-text-center" id="project-grid"
         uk-grid="masonry: true">
 
-        <li v-if="project.public" v-for="project in projects" v-on:click="test(project.slug)"
+        <li v-if="project.public" v-for="project in projects" v-on:click="getProject(project.slug)"
             class="uk-card uk-card-default uk-card-body" v-bind:slug="project.slug"
             v-bind:data-category="project.category">
             <img v-bind:src="project.images.logo" v-bind:alt="project.slug">
         </li>
 
     </ul>
+
+    <div v-if="single" id="modal-project" class="uk-modal-container" uk-modal>
+        <div class="uk-modal-dialog uk-modal-body">
+
+            <div class="top">
+
+                <div class="left">
+                    <div class="visual">
+                    
+                        <img v-bind:src="project.images.top" v-bind:alt="this.project.title">
+
+                    </div>
+                </div>
+
+                <div class="right">
+
+                    <h2 class="uk-modal-title">
+                        {{ this.project.title }}
+                    </h2>
+
+                    <div class="context">
+                        {{ this.project.type }} | {{ this.project.date }}
+                    </div>
+
+                    <div class="content">
+                        {{ this.project.content }}
+                    </div>
+                </div>
+            </div>
+
+            <div class="bottom">
+
+                <div class="left">
+
+                    <div class="visual">
+
+                        <img v-bind:src="project.images.left" v-bind:alt="this.project.title">
+                    </div>
+
+                </div>
+
+                <div class="middle">
+
+                    <div class="colors">
+
+                        <h3>
+                            Colors
+                        </h3>
+
+                        <div class="line">
+
+                            <div v-for="color in project.colors" class="unit">
+                                <div class="square"></div>
+                                <div class="ref">
+                                    <span>
+                                        {{ color }}
+                                    </span>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="fonts">
+                        <h3>
+                            Fonts
+                        </h3>
+
+                        <div class="line">
+                            <p>
+                                {{ this.project.fonts.main.name }}
+                            </p>
+                            <span>
+                                ABCDEFGHIJKLMNOPQRSTUVWYYZ<br>
+                                abcdefghijklmnopqrstuvwxyz<br>
+                                0123456789
+                            </span>
+                        </div>
+
+                        <div v-if="project.fonts.secondary != null" class="line">
+                            <p>
+                                {{ this.project.fonts.secondary.name }}
+                            </p>
+                            <span>
+                                ABCDEFGHIJKLMNOPQRSTUVWYYZ<br>
+                                abcdefghijklmnopqrstuvwxyz<br>
+                                0123456789
+                            </span>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="right">
+
+                    <div class="visual">
+                    
+                        <img v-bind:src="project.images.right" v-bind:alt="this.project.title">
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
