Clean JS folder and set dynamic age calculation in about section

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                     Bonjour ! <br><br>
                                 </p>
                                 <p>
-                                    Mon nom est Mélanie Auray, j'ai 25 ans et je réside actuellement en France.
+                                    Mon nom est Mélanie Auray, j'ai <span id="age"></span> ans et je réside actuellement en France.
                                     Je suis une graphiste Print & Web Designer. Suite a l'obtention de mon
                                     baccalauréat production & communication graphique en 2012, j'ai commencé
                                     ma carrière en tant qu'infographiste Print, par la suite, j'ai passé le titre
