--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
         <li v-if="project.public" v-for="project in projects" v-on:click="getProject(project.slug)"
             class="uk-card uk-card-default uk-card-body" v-bind:slug="project.slug"
             v-bind:data-category="project.category">
-            <img v-bind:src="project.images.logo" v-bind:alt="project.slug">
+            <img v-bind:src="project.images.top" v-bind:alt="project.slug">
         </li>
 
     </ul>
@@ -68,7 +68,7 @@
                         <div class="line">
 
                             <div v-for="color in project.colors" class="unit">
-                                <div class="square"></div>
+                                <div class="square" v-bind:style="{backgroundColor:color}"></div>
                                 <div class="ref">
                                     <span>
                                         {{ color }}
