Render HTML in content

--- a/template.html
+++ b/template.html
@@ -40,8 +40,7 @@
                         {{ this.project.type }} | {{ this.project.date }}
                     </div>
 
-                    <div class="content">
-                        {{ this.project.content }}
+                    <div v-html="project.content" class="content">
                     </div>
                 </div>
             </div>
