--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit-icons.min.js"></script>
     <script src="./scripts/interaction.js"></script>
-    <script src="./scripts/axios.js"></script>
-    <script src="./scripts/vue.js"></script>
+    <script src="./scripts/axios.min.js"></script>
+    <script src="./scripts/vue.min.js"></script>
     <script src="./scripts/app.js"></script>
 </body>
 </html>
