Add Lazy Loading

--- a/index.html
+++ b/index.html
@@ -267,9 +267,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit-icons.min.js"></script>
-    <script src="./scripts/interaction.js"></script>
     <script src="./scripts/axios.min.js"></script>
     <script src="./scripts/vue.min.js"></script>
     <script src="./scripts/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@13.0.1/dist/lazyload.min.js"></script>
+    <script src="./scripts/interaction.js"></script>
 </body>
 </html>
